--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 		<h3></h3>
 
 		<script type="text/javascript" src="myFiles/myScripts.js"></script>
+		<footer>Made with Love</footer>
 	</body>
 </html>
