--- a/index.html
+++ b/index.html
@@ -13,5 +13,7 @@
 
 		<script type="text/javascript" src="myFiles/myScripts.js"></script>
 		<footer>Made with Love</footer>
+		
+		<div class="heart"></div>
 	</body>
 </html>
