--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
 		<script type="text/javascript" src="myFiles/myScripts.js"></script>
 		<footer>Made with Love</footer>
 		
-		<div class="heart">Love</div>
+		<div class="heart"></div>
 	</body>
 </html>
